@@ -5,6 +5,7 @@ Stable versions
 	Fix bugs caught in the OpenMPT test cases:
 	- fix note cut on invalid sample in IT sample mode
 	- fix note end detection in IT sample mode
+	- fix IT envelope handling with carry and fadeout
 
 4.3.6 (20150322):
 	Fix bugs caught in the OpenMPT test cases:
